libstdc++-v3/testsuite/20_util/auto_ptr/assign_neg.cc
// Copyright (C) 2002, 2003 Free Software Foundation
// { dg-error "candidates" "" { target *-*-* } 217 } 
// { dg-error "std::auto_ptr" "" { target *-*-* } 347 } 
